# OOP-Assignments

./: README.md
Assign1/: CMakeLists.txt  Flight.cpp  Flight.h  Passenger.cpp  Passenger.h  main.cpp
Assign2/: CMakeLists.txt  Doctor.cpp  Doctor.h  Specialist.cpp  Specialist.h  Surgeon.cpp  Surgeon.h  main.cpp  surgerySchedule.cpp  surgerySchedule.h
