cmake_minimum_required(VERSION 3.27)
project(Assign2_20236113_20236043)

set(CMAKE_CXX_STANDARD 23)

add_executable(Assign2_20236113_20236043 main.cpp
        Doctor.cpp
        Doctor.h
        surgerySchedule.cpp
        surgerySchedule.h
        Surgeon.cpp
        Surgeon.h
        Specialist.cpp
        Specialist.h)
